# haskell-opentracing

./: .gitignore  README.md  cabal.project  shell.nix  stack.yaml
jaeger-client/: ChangeLog.md  haskell-jaeger-client.cabal  jaeger-client.cabal  shell.nix
jaeger-client/src/: Jaeger.hs
jaeger-client/src-gen/: Agent.hs  Agent_Client.hs  Agent_Consts.hs  Agent_Iface.hs  Agent_Types.hs  AggregationValidator.hs  AggregationValidator_Client.hs  AggregationValidator_Iface.hs  Aggregation_validator_Consts.hs  Aggregation_validator_Types.hs  BaggageRestrictionManager.hs  BaggageRestrictionManager_Client.hs  BaggageRestrictionManager_Iface.hs  Baggage_Consts.hs  Baggage_Types.hs  Collector.hs  Collector_Client.hs  Collector_Iface.hs  Dependency.hs  Dependency_Client.hs  Dependency_Consts.hs  Dependency_Iface.hs  Dependency_Types.hs  Jaeger_Consts.hs  Jaeger_Types.hs  SamplingManager.hs  SamplingManager_Client.hs  SamplingManager_Iface.hs  Sampling_Consts.hs  Sampling_Types.hs  TracedService.hs  TracedService_Client.hs  TracedService_Iface.hs  Tracetest_Consts.hs  Tracetest_Types.hs  ZipkinCollector.hs  ZipkinCollector_Client.hs  ZipkinCollector_Iface.hs  Zipkincore_Consts.hs  Zipkincore_Types.hs
jaeger-client/src/Jaeger/: Carrier.hs  Header.hs  SpanContext.hs  Tracer.hs  Types.hs
jaeger-client/test/: JaegerSpec.hs
jaeger-client/test/Jaeger/: CarrierSpec.hs
opentracing-client/: ChangeLog.md  opentracing-client.cabal
opentracing-client/src/: OpenTracing.hsig
opentracing-client/src/Control/Monad/: OpenTracing.hs
opentracing-client/src/OpenTracing/: Tag.hsig
test-exe/: ChangeLog.md  Main.hs  test-exe.cabal
test-lib/: ChangeLog.md  TestLib.hs  test-lib.cabal
wai-opentracing/: ChangeLog.md  wai-opentracing.cabal
wai-opentracing/src/Network/Wai/Middleware/: OpenTracing.hs
wai-opentracing/test/Network/Wai/Middleware/: OpenTracingSpec.hs
