name:                jaeger-client
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Jaeger
  other-modules:       Collector_Iface
                       Jaeger_Consts
                       Collector_Client
                       Collector
                       Jaeger_Types
                       Agent
                       Agent_Iface
                       Agent_Types
                       Zipkincore_Types
  other-extensions:    DeriveDataTypeable, DeriveGeneric, OverloadedStrings
  build-depends:       QuickCheck,
                       base,
                       bytestring,
                       clock,
                       containers,
                       hashable ,
                       network ,
                       random ,
                       text ,
                       thrift,
                       time ,
                       unordered-containers ,
                       vector ,
                       http-types,
                       serialise,
                       base64-bytestring
  hs-source-dirs:      src, src-gen
  default-language:    Haskell2010
